fixed some alignment issues on the portfolio page

--- a/src/style/portfolio.scss
+++ b/src/style/portfolio.scss
@@ -9,6 +9,8 @@
 
     margin: 0;
     padding: 0;
+
+    justify-content: center;
 }
 
 .madlibs {
